[gd_scene load_steps=2 format=3 uid="uid://bj5obb2exasso"]

[ext_resource type="Script" path="res://Mechanics/HazardManager/hazard_manager.gd" id="1_q17hd"]

[node name="HazardManager" type="Node2D"]
script = ExtResource("1_q17hd")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="VoidTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="CollectableTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="VoidTimer" to="." method="_on_void_timer_timeout"]
[connection signal="timeout" from="CollectableTimer" to="." method="_on_collectable_timer_timeout"]
